Fix wiki mysql database provision

--- a/roles/docker-mediawiki/templates/config.sh.j2
+++ b/roles/docker-mediawiki/templates/config.sh.j2
@@ -10,5 +10,5 @@
   HOST_WIKI_BACKUP_DIR='{{ wiki_docker_backup_dir }}'
   STATIC_BACKUP_FILE='{{ wiki_static_backup_file }}'
   DATABASE_BACKUP_FILE='{{ wiki_database_backup_file }}'
-  WIKI_DB_DB_NAME='wikidb'
+  WIKI_DB_DB_NAME='{{ wiki_database_name }}'
 }
